--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Etch-A-Sketch</title>
+    <title>Etch-a-Sketch</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Etch A Sketch</h1>
+    <div class="content">
+        <div class="toolbox">
+            <input type="color" id="pick" value="#000000">
+            <button id="color">Color</button>
+            <button id="black">Black</button>
+            <button id="random">Random color</button>
+            <button id="grid">Grid lines</button>
+            <input type="range" id="size" value="16" min="1" max="64">
+            <button id="clear">Clear</button>
+        </div>
+     <div id="container"></div>
+    </div>
 </body>
+<script src="etch-a-sketch.js"></script>
 </html>
